--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       content="Playtronica & Chromatone TouchMe Collaboration"
     />
     <meta name="twitter:description" content="MIDI + Synth + Visuals" />
-    <meta name="twitter:image" content="front.webp" />
+    <meta name="twitter:image" content="./front.webp" />
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="touchme-app"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
