--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <div id="touchme-app"></div>
+    <div id="touchme-app">Loading...</div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
