--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
   <body>
     <div id="touchme-app">Loading...</div>
     <script type="module" src="./src/main.js"></script>
+    <script type="text/javascript">
+      window.$sleek = [];
+      window.SLEEK_PRODUCT_ID = 355159471;
+      (function () {
+        d = document;
+        s = d.createElement("script");
+        s.src = "https://client.sleekplan.com/sdk/e.js";
+        s.async = 1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
+    </script>
   </body>
 </html>
