--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="mask-icon" href="favicon.svg" color="#FFFFFF" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@defucc" />
-	<meta name="twitter:creator" content="@defucc" />
+	<meta name="twitter:site" content="@davay42" />
+	<meta name="twitter:creator" content="@davay42" />
 	<meta name="twitter:title" content="Playtronica & Chromatone TouchMe Collaboration" />
 	<meta name="twitter:description" content="MIDI + Synth + Visuals" />
 	<meta name="twitter:image" content="./front.webp" />
