--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<meta name="twitter:title" content="Playtronica & Chromatone TouchMe Collaboration" />
 	<meta name="twitter:description" content="MIDI + Synth + Visuals" />
 	<meta name="twitter:image" content="./front.webp" />
-	<script async defer data-website-id="b97d1f6c-97ac-4603-b26c-b50e3cd85b55"
-		src="https://stats.defucc.me/umami.js"></script>
+	<script async src="https://stats.chromatone.center/script.js"
+		data-website-id="2aa2952b-4d12-4d90-b773-1a82202626d5"></script>
 </head>
 
 <body>
