--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="twitter:creator" content="@davay42" />
 	<meta name="twitter:title" content="Playtronica & Chromatone TouchMe Collaboration" />
 	<meta name="twitter:description" content="MIDI + Synth + Visuals" />
-	<meta name="twitter:image" content="./front.webp" />
+	<meta name="twitter:image" content="/cover.png" />
 	<script async src="https://stats.chromatone.center/script.js"
 		data-website-id="2aa2952b-4d12-4d90-b773-1a82202626d5"></script>
 </head>
